tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari
fn save(x: has serialize() -> String) -> i64 {
  return 0;
}

fn main() -> i64 {
  return 0;
}
